# mine-tui

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: app.rs  event.rs  main.rs  tui.rs  ui.rs
src/api/: fabric.rs  mod.rs  modrinth.rs
src/core/: auth.rs  config.rs  fs.rs  installer.rs  instance.rs  launcher.rs  mod.rs  modpack.rs  versions.rs
